Fixed wrap

--- a/beta/style.css
+++ b/beta/style.css
@@ -59,6 +59,7 @@ body{
   font-size: 15px;
   font-family: Roboto;
   padding-left: 10px;
+  white-space: nowrap;
 }
 
 #pane .flag_container{
